--- a/.github/workflows/pr-comment-date.yml
+++ b/.github/workflows/pr-comment-date.yml
@@ -7,7 +7,8 @@ jobs:
       - uses: wow-actions/auto-comment@v1
         with:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          
+          pullRequestOpened: |
+            Hooray!! {{ payload.updated_at }}
           pullRequestReviewRequested: |
             Assignment initially submitted at {{ payload.updated_at }}
           pullRequestEdited: |
